tests/errors/illegal_root_extend.tau
module m{
    //we require this file, but not from root!
    require "illegal_root_extend.tau.second"; 
}

func main(){
    import m;
}